plugins { id 'java-library' }
java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
tasks.withType(JavaCompile).configureEach { options.release = 21; options.encoding = 'UTF-8' }
dependencies {
    api project(':terminal:launcher-api')
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
    testImplementation platform('org.junit:junit-bom:5.12.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
tasks.withType(Test).configureEach { useJUnitPlatform() }
